<resources>
    <string name="app_name">EduCarts</string>
    <string name="next">Next</string>
    <string name="welcome_to_educarts">Welcome to Educarts</string>
    <string name="on_boarding_title_1">Expert advice and \nsupport</string>
    <string name="on_boarding_title_2">Quick delivery to \ninternational schools</string>
    <string name="on_boarding_title_3">Reasonable exchange \npayment rates </string>
    <string name="on_boarding_description_1">Complete complex transactions with the guide of our expert.</string>
    <string name="on_boarding_description_2">Quick and easy solution to all international school payments.</string>
    <string name="on_boarding_description_3">Stable mechanism that offers you the cheapest  rates to pay less.</string>
    <string name="skip">Skip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_biometric_feature_perform_on_this_device">No biometric feature perform on this device</string>
    <string name="get_started">Get Started</string>
    <string name="personal_account">Personal account</string>
    <string name="institution_account">Institution account</string>
    <string name="choose_an_account_type_to_n_get_started">Choose an account type to \n get started</string>
    <string name="educarts_is_a_payment_solution_you_can_trust">EduCarts is a payment solution you can trust</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="country_of_residence">Country of residence</string>
    <string name="phone">Phone</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="proceed">Proceed</string>
    <string name="verify">Verify</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="resend_code">Resend Code</string>
    <string name="resend_code_in">Resend Code | %1$s</string>
    <string name="didn_t_recieve_code">Didn\'t receive code?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email_address_or_phone_number_and_we_ll_send_you_instructions_to_reset_your_password">Enter your email address or phone number and we\'ll send you instructions to reset your password</string>
    <string name="send_email">Send email</string>
    <string name="send_message">Send message</string>
    <string name="send_otp">Send OTP</string>
    <string name="use_phone_number_instead">Use phone number instead?</string>
    <string name="create_new_password">Create new password</string>
    <string name="create_your_new_password">Create your new password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="reset_password">Reset password</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="support">Support</string>
    <string name="payment">Payment</string>
    <string name="paying_amount">Pay %1$s</string>
    <string name="wallet">Wallet</string>
    <string name="verification_badge">Verification badge</string>
    <string name="copy">Copy</string>
    <string name="copied_to_clip_board">Copied to clipboard</string>
    <string name="no_text_to_copy">No text to copy</string>
    <string name="view_profile">View profile</string>
    <string name="identity_verification">Identity verification</string>
    <string name="faqs">FAQs</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_38_conditions_of_use"><![CDATA[Terms & conditions of use]]></string>
    <string name="rate_us">Rate us</string>
    <string name="sign_out">Sign out</string>
    <string name="security_settings">Security settings</string>
    <string name="notification">Notification</string>
    <string name="biometric_login">Biometric login</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="institution_of_study">Institution of study</string>
    <string name="address_book">Address book</string>
    <string name="about">About</string>
    <string name="payment_method">Payment method</string>
    <string name="my_wallet">My wallet</string>
    <string name="delete_account">Delete account</string>
    <string name="add_address">Add address</string>
    <string name="no_address_added_yet">No address added yet</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="use_for_transaction">Use for transaction</string>
    <string name="home_address">Home address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="apartment_number">Apartment number</string>
    <string name="add">Add</string>
    <string name="choose_any_of_the_following_document_to_get_verified">Choose any of the following document \nto get verified</string>
    <string name="international_passport">International passport</string>
    <string name="national_id_nin">National ID/NIN</string>
    <string name="kindly_provide_an_original_with_colour">Kindly provide an original with colour</string>
    <string name="voter_s_card">Voter\'s card</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="chat">Chat</string>
    <string name="was_this_helpful_no_chat_with_us">Was this helpful? No? Chat with us</string>
    <string name="secure_transactions">Secure transactions</string>
    <string name="password_and_pin">Password and PIN</string>
    <string name="enter_a_4_digit_transaction_pin">Enter a 4-digit transaction PIN</string>
    <string name="transaction_pin">Transaction PIN</string>
    <string name="confirm_transaction_pin">Confirm transaction PIN</string>
    <string name="create_pin">Create PIN</string>
    <string name="security_questions">Security questions</string>
    <string name="security_question_1">Security Question 1</string>
    <string name="security_question_2">Security Question 2</string>
    <string name="answer">Answer</string>
    <string name="finish">Finish</string>
    <string name="submit">Submit</string>
    <string name="change_password">Change password</string>
    <string name="reset_your_password_to_a_new_one">Reset your password to a new one</string>
    <string name="pin">PIN</string>
    <string name="change_pin">Change PIN</string>
    <string name="change_your_transactional_pin">Change your transactional PIN</string>
    <string name="enter_old_pin">Enter old PIN</string>
    <string name="update">Update</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="confirm_new_pin">Confirm new PIN</string>
    <string name="forgot_pin">Forgot PIN</string>
    <string name="change_your_password">Change your password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="enter_your_account_information_to_continue">Enter your account information to continue</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="change_account">Change account</string>
    <string name="my_order">My Order</string>
    <string name="application_fee">Application fee</string>
    <string name="sevis_fee">SEVIS fee</string>
    <string name="select_a_service">Select a service</string>
    <string name="select_a_form_type">Select a form type</string>
    <string name="tuition_fee">Tuition fee</string>
    <string name="visa_fee">Visa fee</string>
    <string name="others">Others</string>
    <string name="credentials_evaluation">Credentials evaluation</string>
    <string name="admission_docs_shipment">Admission docs shipment</string>
    <string name="how_it_works">How it works?</string>
    <string name="choose_one_of_the_options_below_to_get_started">Choose one of the options below to get started</string>
    <string name="carry_out_all_the_sevis_fee_payment_for_me">Carry out all the SEVIS Fee Payment for me</string>
    <string name="i_have_generated_sevis_payment_coupon">I have generated SEVIS Payment Coupon</string>
    <string name="please_fill_the_following_form_as_it_is_in_your_form_i_20_or_ds_2019">Please fill the following form as it is in your Form I-20 or DS-2019</string>
    <string name="please_fill_the_following_form_as_it_is_in_your">Please fill the following form as it is in your %1$s</string>
    <string name="sevis_id">SEVIS ID</string>
    <string name="given_name_first_amp_middle_name"><![CDATA[Given Name(First & Middle Name)]]></string>
    <string name="date_of_birth">Date of birth</string>
    <string name="upload_i_20_or_ds_2019_form_here">Upload I-20 or DS-2019 form here</string>
    <string name="upload_i_20_form_here">Upload I-20 form here</string>
    <string name="upload_ds_2019_form_here">Upload DS-2019 form here</string>
    <string name="browse_and_chose_the_files_you_want_to_upload_from_your_file">Browse and chose the files you want to upload from your file</string>
    <string name="upload_your_recent_passport_here">Upload your recent Passport here</string>
    <string name="upload_your_international_passport_here">Upload your international passport here</string>
    <string name="form_type">Form type</string>
    <string name="country_of_citizenship">Country of citizenship</string>
    <string name="country_of_birth">Country of birth</string>
    <string name="category">Category</string>
    <string name="state">State</string>
    <string name="street_address_2">Street address 2</string>
    <string name="street_address_1">Street address 1</string>
    <string name="order_summary">Order summary</string>
    <string name="payment_summary">Payment summary</string>
    <string name="exchange_rate">Exchange rate</string>
    <string name="grade_eligibility">Grade eligibility</string>
    <string name="please_select_your_local_grading_system">Please select your local grading system</string>
    <string name="education_country">Education country</string>
    <string name="nigeria">Nigeria</string>
    <string name="education_level">Education level</string>
    <string name="_4_year_bachelors_degree">4-Year Bachelors Degree</string>
    <string name="grading_scheme">Grading scheme</string>
    <string name="higher_education_5_0_scale">Higher Education 5.0 scale</string>
    <string name="grading_average">Grading average</string>
    <string name="check_eligibility">Check eligibility</string>
    <string name="application_form">Application Form</string>
    <string name="you_are_to_fill_out_the_application_form_of_the_school_of_your_choice_you_selected_by_clicking_on_the_link_below_this_will_direct_you_to_the_school_portal_where_you_fill_out_the_required_information">You are to fill out the application form of the school of your choice you selected by clicking on the link below. This will direct you to the school portal where you fill out the required information.</string>
    <string name="the_link">The Link:</string>
    <string name="click_below_to_proceed_to_payment_to_the_school_after_filling_out_the_application_form">Click below to proceed to payment to the school after filling out the application form.</string>
    <string name="follow_these_steps_to_recover_your_password">Follow these steps to recover your password</string>
    <string name="enter_the_4_digit_code_sent_by_email">Enter the 4-digit code sent by Email</string>
    <string name="get_verified">Get verified</string>
</resources>