<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".ui.auth.forgotPassword.ForgotPasswordInstructionsFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_regular"
        android:lineHeight="18dp"
        android:text="@string/follow_these_steps_to_recover_your_password"
        android:textColor="@color/text_light"
        android:textSize="16sp"
        android:textStyle="normal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/white_bg_with_gray_borders"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:orientation="vertical"
        android:paddingHorizontal="2dp"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/enter_the_4_digit_code_sent_by_email"
            android:textColor="@color/text_light"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/one_orange_bg"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/get_verified"
            android:textColor="@color/text_light"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/two_orange_bg"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/change_your_password"
            android:textColor="@color/text_light"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/three_orange_bg"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/primary_button"
        android:fontFamily="@font/montserrat_medium"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/next"
        android:textAllCaps="false"
        app:backgroundTint="@null" />


</LinearLayout>